fixed image size on mobile

--- a/src/Sass/About/About.scss
+++ b/src/Sass/About/About.scss
@@ -50,8 +50,8 @@ a {
 }
 .imageContainer {
   overflow: hidden;
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
   justify-self: center;
   align-self: center;
   flex-shrink: 1;
